[UPDATE] Anpassungen Steps + Farben + Änderungen JS (AppBg / selected list)

--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -19,6 +19,7 @@
 
 @import "base/header";
 @import "base/footer";
+@import "base/steps";
 
 @import "components/logo";
 @import "components/forms";
