--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -57,7 +57,7 @@
 <main class="grid main">
 
     {% block body %}{% endblock %}
-    <div class="footer-push"></div>
+    <!--<div class="footer-push"></div>-->
 
 </main>
 
