--- a/client/src/scss/base/_mixins.scss
+++ b/client/src/scss/base/_mixins.scss
@@ -1,17 +1,22 @@
-@mixin gradientBG() {
-    background: -webkit-linear-gradient(0deg, #360033 10%, #0b8793 90%); /* Chrome 10+, Saf5.1+ */
-    background:    -moz-linear-gradient(0deg, #360033 10%, #0b8793 90%); /* FF3.6+ */
-    background:     -ms-linear-gradient(0deg, #360033 10%, #0b8793 90%); /* IE10 */
-    background:      -o-linear-gradient(0deg, #360033 10%, #0b8793 90%); /* Opera 11.10+ */
-    background:         linear-gradient(0deg, #360033 10%, #0b8793 90%); /* W3C */
-}
-
-@mixin gradientBGAlt() {
-    background: -webkit-linear-gradient(0deg, $bg-sec 10%, lighten($bg-sec,10%) 90%); /* Chrome 10+, Saf5.1+ */
-    background:    -moz-linear-gradient(0deg, $bg-sec 10%, lighten($bg-sec,10%) 90%); /* FF3.6+ */
-    background:     -ms-linear-gradient(0deg, $bg-sec 10%, lighten($bg-sec,10%) 90%); /* IE10 */
-    background:      -o-linear-gradient(0deg, $bg-sec 10%, lighten($bg-sec,10%) 90%); /* Opera 11.10+ */
-    background:         linear-gradient(0deg, $bg-sec 10%, lighten($bg-sec,10%) 90%); /* W3C */
+@mixin shadow($level: 1){
+    @if  $level == 1 {
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    }
+        @else if $level == 2 {
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    }
+        @else if $level == 3 {
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    }
+        @else if $level == 4 {
+            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
+        @else if $level == 5 {
+            box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    }
+        @else {
+            @warn "Level Value expected to be 1-5";
+    }
 }
 
 @mixin clearfix() {
