--- a/client/src/scss/base/_slider.scss
+++ b/client/src/scss/base/_slider.scss
@@ -121,7 +121,7 @@ $slick-opacity-not-active: .25 !default;
     cursor: pointer;
 
     background: transparent;
-    color: $slick-arrow-color;
+    color: $bg-primary;
 
     top: 50%;
     margin-top: -25px;
