--- a/client/src/scss/components/_logo.scss
+++ b/client/src/scss/components/_logo.scss
@@ -29,9 +29,9 @@
 .logo {
     float: left;
 
-    @include breakpoint(m) {
-        border-right: 1px solid $border-light;
-    }
+//    @include breakpoint(m) {
+//        border-right: 1px solid $border-light;
+//    }
 
     > * {
         display: inline-block;
