--- a/client/src/scss/components/_profile-page.scss
+++ b/client/src/scss/components/_profile-page.scss
@@ -1,5 +1,4 @@
 .profile-form-wrapper {
-    padding: $space 0 0;
     overflow: hidden;
 
     transition: height 0.2s ease;
@@ -8,26 +7,37 @@
         margin-top: 0;
     }
 
-    @include breakpoint(m) {
-        padding: 0;
-    }
-
-    @include breakpoint(xl) {
-        padding: $space*2 0 0;
-    }
-
     .form-action {
-
-        margin: 0.3125rem;
-//        min-height: 500px;
-        background-color: $bg-sec;
-        padding: $space-half;
+        width: 100%;
+        height: 100%;
+        padding: $space*2.5 0;
+        opacity: 0;
 
         @include breakpoint(m) {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+        }
+    }
+
+    .step-content {
+        @include shadow(2);
+
+        margin: 0.3125rem auto;
+        padding: $space-half;
+        flex: none;
+
+        background-color: $bg-sec;
+
+        width: 90%;
+        max-width: 1100px;
+
+        @include breakpoint(m) {
+            width: 80%;
             padding: 2rem;
             margin: $space-double;
         }
-
     }
 }
 
