--- a/client/views/bands/main.html
+++ b/client/views/bands/main.html
@@ -5,11 +5,10 @@
 {% from "_formhelpers.html" import renderMessages %}
 
 {% block body %}
-{{ renderMessages() }}
 
 
 <div id="messages" class="message-container">
-
+    {{ renderMessages() }}
 </div>
 
 
@@ -17,27 +16,36 @@
     <div class="row">
         <div class="profile-form-wrapper col-xs-12">
             <div class="form-action" id="step-info">
-                {% include "profile.html" %}
+                <div class="step-content">
+                    {% include "profile.html" %}
+                </div>
             </div>
 
             <div class="form-action" id="step-music">
-                {% include "tracks.html" %}
+                <div class="step-content">
+                    {% include "tracks.html" %}
+                </div>
             </div>
 
             <div class="form-action" id="step-image">
-                {% include "image.html" %}
+                <div class="step-content">
+                    {% include "image.html" %}
+                </div>
             </div>
 
             <div class="form-action" id="step-techrider">
-                {% include "techrider.html" %}
+                <div class="step-content">
+                    {% include "techrider.html" %}
+                </div>
             </div>
 
             <div class="form-action" id="step-summary">
-                {% include "check.html" %}
+                <div class="step-content">
+                    {% include "check.html" %}
+                </div>
             </div>
         </div>
     </div>
-    <!--<div class="footer-push"></div>-->
 </section>
 
 {% endblock %}
