[UPDATE] Anpassung Übersichtsseite

--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -26,6 +26,7 @@
 @import "components/profile-page";
 @import "components/audioplayer";
 @import "components/spinner";
+@import "components/check";
 
 @import "page/login";
 @import "page/messages";
