--- a/client/src/scss/components/_profile-page.scss
+++ b/client/src/scss/components/_profile-page.scss
@@ -35,7 +35,7 @@
         @include breakpoint(m) {
             width: 80%;
             padding: 2rem;
-            margin: $space-double;
+            margin: $space*3 $space-double;
         }
     }
 }
