[UPDATE] WIP Lösung für State Check von Steps (Vollständig / Unvollständig)

--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -41,7 +41,7 @@ ul ul, ol ol, ul ol, ol ul {
     margin-top: 0;
     margin-bottom: 0;
 }
-b, strong, em, small, code {
+b, strong, em, code {
     line-height: 1;
 }
 sup, sub {
