--- a/client/views/bands/image.html
+++ b/client/views/bands/image.html
@@ -1,4 +1,5 @@
-<h2>Bild</h2>
+<h2>Bild<div class="check-status"><i></i></div></h2>
+
 
 <div id="image" class="uploaded-files band-image">
     {% if g.band.image %}
