--- a/client/views/bands/techrider.html
+++ b/client/views/bands/techrider.html
@@ -4,7 +4,7 @@
 {% from "_formhelpers.html" import renderMessages %}
 
 
-<h2>Techrider</h2>
+<h2>Techrider<div class="check-status"><i></i></div></h2>
 
 
 <div class="icon-container">
