--- a/client/src/scss/components/_check.scss
+++ b/client/src/scss/components/_check.scss
@@ -1,5 +1,19 @@
 .check-list {
     margin-bottom: 0;
+
+    .check-status {
+        width: 45px;
+        height: 45px;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+
+
+        i {
+            font-size: 25px;
+        }
+    }
 }
 
 .check-row {
@@ -36,8 +50,13 @@
     padding-right: 60px;
     flex: 1 1 100%;
 
+    span,
     a {
-        display: block;
+        display: inline-block;
+    }
+
+    span {
+        padding-right: $space-half;
     }
 
     @include breakpoint(m) {
@@ -45,38 +64,25 @@
     }
 }
 
-.check-status {
-    width: 45px;
-    position: absolute;
-    top: 50%;
-    right: 0;
-
-    transform: translateY(-50%);
-
-
-    i {
-        color: $bg-primary;
-        font-size: 25px;
-
-        display: inline-block;
-        padding: 10px;
-        border-radius: 50%;
-    }
-
-    .i-close {
-        background-color: $error;
-    }
-
-    .i-done {
-        background-color: $success;
-    }
-}
-
 .check-submit {
+    display: block;
     padding-bottom: 0;
     text-align: left;
 
     div {
         padding: $space;
+    }
+
+    .btn {
+        display: inline-block;
+        height: auto;
+        padding: $space-half $space;
+        margin-bottom: $space-half;
+    }
+
+    small {
+        display: block;
+        opacity: 0.8;
+        text-align: center;
     }
 }
