[UPDATE] kleine anpassung an track uploads - entferne check-status in übersicht

--- a/client/views/bands/check.html
+++ b/client/views/bands/check.html
@@ -4,7 +4,7 @@
 {% from "_formhelpers.html" import renderMessages %}
 
 
-<h2>Übersicht<div class="check-status"><i></i></div></h2>
+<h2>Übersicht</h2>
 
 
 <ul class="check-list" id="check-overview">
