--- a/client/views/bands/main.html
+++ b/client/views/bands/main.html
@@ -40,7 +40,9 @@
             </div>
 
             <div class="form-action" id="step-summary">
-                {% include "check.html" %}
+                <div class="step-content">
+                    {% include "check.html" %}
+                </div>
             </div>
         </div>
     </div>
