--- a/client/views/bands/check.html
+++ b/client/views/bands/check.html
@@ -84,6 +84,6 @@
         <small>(Keine Änderungen mehr möglich!)</small>
     </a>
     {% else %}
-    <div class="error">Das Abschließen der Bewerbung ist erst möglich, benötigten Schritte vollständig sind.</div>
+    <div class="error">Das Abschließen der Bewerbung ist erst möglich, wenn die benötigten Schritte vollständig sind.</div>
     {% endif %}
 </div>
