--- a/client/src/scss/base/_header.scss
+++ b/client/src/scss/base/_header.scss
@@ -10,7 +10,7 @@ header {
     font-weight: 200;
 
     position: absolute;
-    top: 0;
+    top: 10px;
     left: 0;
     width: 100%;
     z-index: 1000;
