--- a/client/src/scss/base/_steps.scss
+++ b/client/src/scss/base/_steps.scss
@@ -1,19 +1,19 @@
 .step-info {
-    background-color: #c62828;
+    background-color: $step1;
 }
 
 .step-music {
-    background-color: #AD1457;
+    background-color: $step2;
 }
 
 .step-image {
-    background-color: #6A1B9A;
+    background-color: $step3;
 }
 
 .step-techrider {
-    background-color: #4527A0;
+    background-color: $step4;
 }
 
 .step-summary {
-    background-color: #283593;
+    background-color: $step5;
 }
