--- a/client/src/scss/base/_main.scss
+++ b/client/src/scss/base/_main.scss
@@ -22,7 +22,7 @@ body {
     min-height:100%;
     height: auto !important; // the magic!
     height:100%;
-    margin-bottom:-92px; // the height of our footer + margin
+    margin-bottom: -6.1rem; // the height of our footer + margin
     overflow: hidden;
 
     transition: background-color 0.5s linear;
