--- a/client/src/scss/base/_variables.scss
+++ b/client/src/scss/base/_variables.scss
@@ -14,6 +14,12 @@ $text-muted: $light;
 $error: #E74C3C;
 $success: #50b87f;
 
+$step1: #c62828;
+$step2: #AD1457;
+$step3: #6A1B9A;
+$step4: #4527A0;
+$step5: #283593;
+
 $border-light: $bg-sec;
 
 /* GRID */
