--- a/client/views/header.html
+++ b/client/views/header.html
@@ -1,3 +1,4 @@
+<div class="color-bar"></div>
 <header>
     <div class="logo">
         <!--<img src="img/tunefish.svg" alt="Tunefish" class="anim-logo"/>-->
