--- a/client/src/scss/page/_login.scss
+++ b/client/src/scss/page/_login.scss
@@ -8,7 +8,8 @@
         position: absolute;
         width: 100%;
         top: 50%;
-        transform: translateY(-50%);
+        left: 50%;
+        transform: translate(-50%, -50%);
         margin-top: 0;
     }
 
