--- a/client/views/bands/image.html
+++ b/client/views/bands/image.html
@@ -21,3 +21,9 @@
 
     <input type="submit" value="Bild senden">
 </form>
+
+<div class="hint">
+    <div class="hint-icon"><i class="i-help"></i></div>
+    Bitte stellt uns ein Bandfoto zur Verfügung, dass wir auf unsere Homepage zur Vorstellung eurer Band nutzen können.
+    Dieses Foto muss als <strong>png, jpg oder gif</strong> vorliegen und sollte mindestens <strong>1000px breit</strong> sein.
+</div>
