--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -67,15 +67,12 @@
         <legend>Beschreibung</legend>
 
         <div class="row">
-            <div class="col-xs-12">
-                {{ renderDefault(band_form.descp) }}
+            <div class="col-xs-12" >
+                {{ renderDefault(band_form.descp, "Bitte mindestens 30 Zeichen. Diesen Text nutzen wir später um eure Band auf der Sommerfest Webseite unter http://www.vorstrasse-bremen.de zu promoten.") }}
             </div>
         </div>
 
     </fieldset>
-
-
-
 
     <input type="submit" value="Bandinfos senden">
 </form>
