--- a/client/views/bands/techrider.html
+++ b/client/views/bands/techrider.html
@@ -32,3 +32,8 @@
 
     <input type="submit" value="Techrider senden">
 </form>
+
+<div class="hint">
+    <div class="hint-icon"><i class="i-help"></i></div>
+    Damit wir euch später auf der Bühne richtig betreuen können, brauchen wir euren Techrider. Ihr könnt hier <strong>eine pdf-Datei</strong> hochladen.
+</div>
