Corrected space that have changed due to the colored line on top make the error bit brighter, and add 2px space between the messages

--- a/client/src/scss/base/_variables.scss
+++ b/client/src/scss/base/_variables.scss
@@ -11,7 +11,7 @@ $text-dark: #545a6a;
 $text-action: $bg-ter;
 $text-muted: $light;
 
-$error: #E74C3C;
+$error: #ef5350;
 $success: #50b87f;
 
 $step1: #c62828;
