--- a/client/views/bands/tracks.html
+++ b/client/views/bands/tracks.html
@@ -41,5 +41,5 @@
 
 <div class="hint">
     <div class="hint-icon"><i class="i-help"></i></div>
-    Bitte ladet 3 bis 5 Songs hoch. Es können nur <strong>nur MP3-Dateien</strong> hochgeladen werden. Habt während des Uploads bitte ein bisschen Geduld, der Upload der Tracks dauert erfahrungsgemäß einen kleinen Moment länger.
+    Bitte ladet 3 bis 5 Songs hoch. Es können <strong>nur MP3-Dateien</strong> hochgeladen werden. Habt während des Uploads bitte ein bisschen Geduld, der Upload der Tracks dauert erfahrungsgemäß einen kleinen Moment länger.
 </div>
