[UPDATE] landingpage textänderungen

--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -80,6 +80,20 @@
     <a class="btn" href="/bands" title="Zur Bandbewerbung">Zur Bandbewerbung</a>
 
     <p>
+        <span>Sommerfest - Was ist das?</span>
+        Das Sommerfest in den Wohnheimen Vorstraße und Spittaler Straße ist das größte studentisch organisierte Festival in Bremen und umzu. <br/>
+        Es wird in Eigenverantwortung von den Bewohnern der benachbarten Studentenwohnheime Vorstraße und Spittaler Straße organisiert.
+        <br/>
+        <br/>
+        Alles fing in den Siebzigern an. Im Innenhof des Studentenwohnheims Vorstraße versammelten sich ein paar Studenten, um mit Bier und Trommelmusik zusammen zu feiern. Nun jährt sich dieses Fest zum 37. Mal und es hat sich einiges verändert: Auf zwei Bühnen performen Bands und Live-Acts und um sie herum tummeln sich 2000–3000 Leute pro Abend! Nach der Bühnenshow wird unser Fahrradkeller zur Tanzfläche umfunktioniert und so wird noch gefeiert bis in die frühen Morgenstunden!
+        <br/>
+        <br/>
+        Aber eins ist von damals bis heute geblieben: Unser Sommerfest ist vollkommen unkommerziell ausgerichtet, daher treten alle Bands ohne Gage auf. Natürlich übernehmen wir eure Anfahrtskosten und ihr werdet bei uns mit Speis' und Trank versorgt.
+        <br/>
+        Falls eine Übernachtungsmöglichkeit nötig ist, so bekommen wir die innerhalb unseres Wohnheims auch organisiert!
+    </p>
+
+    <p>
         <span>Was ist tunefish? Warum machen wir das?</span>
         Das könnte man sich natürlich als erstes Fragen. <br/>
         Fakt ist, dass wir jedes Jahr mehr tolle Bewerbungen von Euch bekommen und wir diese Bewerbungen dann erst einmal
@@ -92,7 +106,12 @@
         richtige Richtung ist und unser "tunefish" auch bei Euch Anklang findet. <br/> <br/>
         Solltet Ihr bei der Benutzung Probleme oder Fragen haben wendet euch bitte umgehend an
         <br/>
-        <a href="mailto:tunefish@vorstrasse-bremen.de">tunefish@vorstrasse-bremen.de</a>.
+        <a href="mailto:tunefish@vorstrasse-bremen.de"><strong>tunefish@vorstrasse-bremen.de</strong></a>.
+        <br/>
+        <br/>
+        Die Bandakquise erreicht ihr wie gewohnt unter
+        <br/>
+        <a href="mailto:play@vorstrasse-bremen.de"><strong>play@vorstrasse-bremen.de</strong></a>.
         <br/>
         Wir helfen euch dann ASAP weiter.
         <br/><br/>
