[UPDATE] landingpage textänderungen

--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -85,12 +85,15 @@
         Es wird in Eigenverantwortung von den Bewohnern der benachbarten Studentenwohnheime Vorstraße und Spittaler Straße organisiert.
         <br/>
         <br/>
-        Alles fing in den Siebzigern an. Im Innenhof des Studentenwohnheims Vorstraße versammelten sich ein paar Studenten, um mit Bier und Trommelmusik zusammen zu feiern. Nun jährt sich dieses Fest zum 37. Mal und es hat sich einiges verändert: Auf zwei Bühnen performen Bands und Live-Acts und um sie herum tummeln sich 2000–3000 Leute pro Abend! Nach der Bühnenshow wird unser Fahrradkeller zur Tanzfläche umfunktioniert und so wird noch gefeiert bis in die frühen Morgenstunden!
+        Alles fing in den Siebzigern an. Im Innenhof des Studentenwohnheims Vorstraße versammelten sich ein paar Studenten, um mit Bier und Trommelmusik zusammen zu feiern. Nun jährt sich dieses Fest zum 38. Mal und es hat sich einiges verändert: Auf zwei Bühnen performen Bands und Live-Acts und um sie herum tummeln sich <strong>2000–3000 Leute pro Abend</strong>!
         <br/>
         <br/>
         Aber eins ist von damals bis heute geblieben: Unser Sommerfest ist vollkommen unkommerziell ausgerichtet, daher treten alle Bands ohne Gage auf. Natürlich übernehmen wir eure Anfahrtskosten und ihr werdet bei uns mit Speis' und Trank versorgt.
         <br/>
         Falls eine Übernachtungsmöglichkeit nötig ist, so bekommen wir die innerhalb unseres Wohnheims auch organisiert!
+        <br/>
+        Bei Fragen zur Übernachtung, oder anderen Band relevanten Themen schreibt uns einfach unter <br/>
+        <a href="mailto:play@vorstrasse-bremen.de"><strong>play@vorstrasse-bremen.de</strong></a>.
     </p>
 
     <p>
@@ -108,10 +111,6 @@
         <br/>
         <a href="mailto:tunefish@vorstrasse-bremen.de"><strong>tunefish@vorstrasse-bremen.de</strong></a>.
         <br/>
-        <br/>
-        Die Bandakquise erreicht ihr wie gewohnt unter
-        <br/>
-        <a href="mailto:play@vorstrasse-bremen.de"><strong>play@vorstrasse-bremen.de</strong></a>.
         <br/>
         Wir helfen euch dann ASAP weiter.
         <br/><br/>
