[UPDATE] landingpage textänderungen vol.4

--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -78,6 +78,9 @@
     </section>
 
     <a class="btn" href="/bands" title="Zur Bandbewerbung">Zur Bandbewerbung</a>
+    <div>
+        <small>Die Anmeldung ist kostenlos und mit keinerlei Spam verbunden!</small>
+    </div>
 
     <p>
         <span>Sommerfest - Was ist das?</span>
@@ -92,8 +95,16 @@
         <br/>
         Falls eine Übernachtungsmöglichkeit nötig ist, so bekommen wir die innerhalb unseres Wohnheims auch organisiert!
         <br/><br/>
-        Bei Fragen zur Übernachtung, oder anderen Band relevanten Themen schreibt uns einfach unter <br/>
+        Bei Fragen zur Übernachtung, oder anderen Band relevanten Themen schreibt uns einfach an <br/>
         <a href="mailto:play@vorstrasse-bremen.de"><strong>play@vorstrasse-bremen.de</strong></a>.
+        <br/><br/>
+        oder postalisch an
+        <br/>
+        <strong>Sommerfest Bandbewerbungen<br />
+            c/o Lisa C. Eckhardt<br />
+            Vorstraße 99 - WG E03<br />
+            28359 Bremen
+        </strong>
     </p>
 
     <p>
