Add automatic closing of the registration Add date of registration close to layout

--- a/client/views/_formhelpers.html
+++ b/client/views/_formhelpers.html
@@ -1,5 +1,5 @@
 
-{% macro getField(field, placeholder = '', required=False) %}
+{% macro getField(field, placeholder = '', regex='', required=False) %}
     {% if field.errors %}
         {% for error in field.errors %}
 
