--- a/client/views/header.html
+++ b/client/views/header.html
@@ -5,6 +5,10 @@
         <span>tunefish</span>
     </div>
 
+    <div class="deadline">
+        <span>Ende der Bewerbungsphase: {{ g.deadline }}</span>
+    </div>
+
     {% if g.band %}
         <div class="account">
             <div class="account-image">
